Simplify JVM arguments: default JDWP port 44892, drop jdk.attach requirement
Standardize on port 44892 for JDWP, eliminating the need for the Attach
API to discover auto-assigned ports. Users no longer need --add-modules
jdk.attach or -Djdk.attach.allowAttachSelf=true. The required JVM args
are now just:

  -javaagent:durable-threads-1.0.0.jar
  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892
  --add-modules jdk.jdi

The Attach API is kept as an optional fallback (for users who prefer
address=...0), with Throwable catch to handle missing jdk.attach module
gracefully. Port can also be overridden via -Ddurable.jdwp.port=PORT.

https://claude.ai/code/session_01JVaEev424m8qmDwGq8FATE