@@ -57,8 +57,8 @@ Both JVMs must be started with the agent and JDWP enabled:
 % javac -g -cp durable-threads-1.0.0.jar FreezeDemo.java RestoreDemo.java
 
 % java -javaagent:durable-threads-1.0.0.jar \
-       -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:0 \
-       --add-modules jdk.jdi,jdk.attach -Djdk.attach.allowAttachSelf=true \
+       -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892 \
+       --add-modules jdk.jdi \
        -cp .:durable-threads-1.0.0.jar \
        FreezeDemo
 i=0
@@ -70,8 +70,8 @@ i=5
 About to freeze!
 
 % java -javaagent:durable-threads-1.0.0.jar \
-       -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:0 \
-       --add-modules jdk.jdi,jdk.attach -Djdk.attach.allowAttachSelf=true \
+       -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892 \
+       --add-modules jdk.jdi \
        -cp .:durable-threads-1.0.0.jar \
        RestoreDemo
 Resumed!
@@ -254,8 +254,8 @@ src/main/java/ai/jacc/durableThreads/
 ## Requirements
 
 - **Java 21+** — uses modern language features and JDI APIs
-- **JDWP** — the JVM must be started with `-agentlib:jdwp=...` for freeze/restore
-- **jdk.jdi and jdk.attach modules** — add `--add-modules jdk.jdi,jdk.attach -Djdk.attach.allowAttachSelf=true` to the command line
+- **JDWP** — the JVM must be started with `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892`. The library connects to this port by default; override with `-Ddurable.jdwp.port=PORT` if needed
+- **jdk.jdi module** — add `--add-modules jdk.jdi` to the command line
 
 ## License
 
