@@ -103,9 +103,8 @@ class ReadmeDemoIT {
         ProcessBuilder freezePb = new ProcessBuilder(
                 java,
                 "-javaagent:" + agentJar,
-                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:0",
-                "--add-modules", "jdk.jdi,jdk.attach",
-                "-Djdk.attach.allowAttachSelf=true",
+                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892",
+                "--add-modules", "jdk.jdi",
                 "-cp", classpath,
                 "FreezeDemo");
         freezePb.directory(tempDir.toFile());
@@ -143,9 +142,8 @@ class ReadmeDemoIT {
         ProcessBuilder restorePb = new ProcessBuilder(
                 java,
                 "-javaagent:" + agentJar,
-                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:0",
-                "--add-modules", "jdk.jdi,jdk.attach",
-                "-Djdk.attach.allowAttachSelf=true",
+                "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:44892",
+                "--add-modules", "jdk.jdi",
                 "-cp", classpath,
                 "RestoreDemo");
         restorePb.directory(tempDir.toFile());
